<resources>
    <string name="app_name">LearnEnglish</string>
    <string name="food">Food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="food_fragment">Food</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="help_fragment">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting_fragment">Setting</string>
    <string name="auto_light">Auto light adjust</string>
    <string name="animal_fragment">Animal</string>
    <string name="random_fragment">Random Words</string>
    <string name="only_English">Only play English</string>
    <string name="shake_Control_Play">Shake control play</string>
    <string name="time">Set play time</string>
</resources>
