<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/random"
        android:title="@string/random_fragment"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/food"
        android:title="@string/food_fragment"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/animal"
        android:title="@string/animal_fragment"
        app:showAsAction="never">
    </item>



    <item
        android:id="@+id/setting"
        android:title="@string/setting_fragment"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help_fragment"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never">
    </item>



</menu>